# smart-shop-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.ai  README.md  config.py  docker-compose.yml  init-db.sh  main.py  pyproject.toml  requirements.txt
BillDeck-backend/: .dockerignore  Dockerfile  requirements.txt
BillDeck-backend/app/: crud.py  database.py  main.py
BillDeck-backend/app/routes/: ai.py  customer.py  notification.py  sales.py
DukaanSahaayak-client/: .dockerignore  .env.example  Dockerfile  nginx.conf
agents/rag_agent_v2/rag_agent/: langgraph_agent.py  main.py  nodes.py  shared.py  tools.py
synthetic_Data/: data_filling.py
utils/: chunker2.py  ingestor.py
